Make tabs 8 columns

--- a/src/pages/guidelines/color/implementation.mdx
+++ b/src/pages/guidelines/color/implementation.mdx
@@ -65,7 +65,7 @@ to use when building your product.
 | `$border-subtle-selected` | `$border-subtle-selected-01` | `$border-subtle-selected-02` | `$border-subtle-selected-03` |
 | `$border-strong`          | `$border-strong-01`          | `$border-strong-02`          | `$border-strong-03`          |
 
-</br>
+<br />
 
 ### Layer set tokens
 
@@ -90,6 +90,9 @@ tokens are a part of these layering sets. Other tokens for elements like `text`
 and `icon` work across layer sets.  _Note: previously in v10 many color tokens
 had numeral suffixes, now in v11 only layering tokens will have this
 distinction._
+
+<Row>
+<Column colLg={8}>
 
 <Tabs>
 
@@ -119,7 +122,10 @@ distinction._
 
 </Tabs>
 
-</br>
+</Column>
+</Row>
+
+<br />
 
 #### Example of how to apply layer set tokens in a layout
 
@@ -172,7 +178,7 @@ of third layer level and will use tokens from layer set 03.
 
 </Tabs>
 
-</br>
+<br />
 
 #### Building components with layer tokens
 
@@ -243,7 +249,7 @@ contextual token is always the same across layer levels.
 
 </Tabs>
 
-</br>
+<br />
 
 #### Example of how to apply contextual layers tokens in a layout
 
