update tabs to 8 column

--- a/src/pages/guidelines/color/implementation.mdx
+++ b/src/pages/guidelines/color/implementation.mdx
@@ -150,6 +150,9 @@ of third layer level and will use tokens from layer set 03.
 - Layer set 02: Teal
 - Layer set 03: Cyan
 
+<Row>
+<Column colLg={8}>
+
 <Tabs>
 
 <Tab label="White">
@@ -177,6 +180,9 @@ of third layer level and will use tokens from layer set 03.
 </Tab>
 
 </Tabs>
+
+</Column>
+</Row>
 
 <br />
 
@@ -221,6 +227,9 @@ Contextual tokens have all the same type of tokens as the layer set except
 without the number prefixes. It doesn't matter what layer it sits on, the
 contextual token is always the same across layer levels.
 
+<Row>
+<Column colLg={8}>
+
 <Tabs>
 
 <Tab label="White">
@@ -249,6 +258,9 @@ contextual token is always the same across layer levels.
 
 </Tabs>
 
+</Column>
+</Row>
+
 <br />
 
 #### Example of how to apply contextual layers tokens in a layout
@@ -260,6 +272,9 @@ on different levels but they both use the `$layer` token that will output a
 different values in code with the help of the layer component.
 
 - Contextual token: magenta
+
+<Row>
+<Column colLg={8}>
 
 <Tabs>
 
@@ -288,6 +303,9 @@ different values in code with the help of the layer component.
 </Tab>
 
 </Tabs>
+
+</Column>
+</Row>
 
 #### Building components with contextual tokens
 
