--- a/src/pages/guidelines/color/implementation.mdx
+++ b/src/pages/guidelines/color/implementation.mdx
@@ -16,9 +16,8 @@ TBD
 <AnchorLinks>
 
 <AnchorLink>Implementing the layering model</AnchorLink>
-<AnchorLink>Color anatomy</AnchorLink>
-<AnchorLink>Implementing color</AnchorLink>
-<AnchorLink>Accessibility</AnchorLink>
+<AnchorLink>Light or dark mode</AnchorLink>
+<AnchorLink>Inline theming</AnchorLink>
 <AnchorLink>Resources</AnchorLink>
 
 </AnchorLinks>
@@ -30,10 +29,10 @@ by using explicit layer tokens or smart contextual layer tokens. Both ways are
 acceptable with different pros and cons that should be weighed in deciding which
 to use when building your product.
 
-| Token type              | Definition                                                                                                                                                                                          |
-| ----------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| Layer set tokens        | Explicit tokens used to manually map the layering model onto components. They come in sets based on their level in the layering model and are part of the theme package.                            |
-| Contextual layer tokens | "Magic" tokens that automatically infer value based on the context a component inside the layering model. They are part of the component package and don't have an explicit value assigned to them. |
+| Token type                                                                          | Definition                                                                                                                                                                                             |
+| ----------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| [Layer set tokens](/guidelines/color/implementation#layer-set-tokens)               | Explicit tokens used to manually map the layering model onto components. They come in sets based on their level in the layering model and are part of the theme package.                               |
+| [Contextual layer tokens](/guidelines/color/implementation#contextual-layer-tokens) | Abstracted tokens that automatically infer value based on the context a component inside the layering model. They are part of the component package and don't have an explicit value assigned to them. |
 
 <Row>
 <Column colLg={12}>
@@ -151,7 +150,7 @@ of third layer level and will use tokens from layer set 03.
 - Layer set 03: Cyan
 
 <Row>
-<Column colLg={8}>
+<Column colLg={12}>
 
 <Tabs>
 
@@ -274,7 +273,7 @@ different values in code with the help of the layer component.
 - Contextual token: magenta
 
 <Row>
-<Column colLg={8}>
+<Column colLg={12}>
 
 <Tabs>
 
@@ -337,7 +336,7 @@ a single component without having to develop explicit hard coded variants.
 <InlineNotification>
 
 **Coming soon:** Dev content is currently be worked on. Check back at a later
-date.
+date for more information.
 
 </InlineNotification>
 
@@ -405,7 +404,7 @@ for a mode control in IBM products may be offered in the future.
 <Row>
 <Column colLg={12}>
 
-![Example of a color mode control](images/ccolor-modes-control.png)
+![Example of a color mode control](images/color-modes-control.png)
 
 </Column>
 </Row>
@@ -436,9 +435,9 @@ changing modes.
 
 <InlineNotification>
 
-**Coming soon:** More guidance and information on how to properly treat
-illustrations, images, and pictograms in light or dark mode. For now, checkout
-some helpful guidance around this topic on
+More guidance and information on how to properly treat illustrations, images,
+and pictograms in light or dark mode may be available in the future. For now,
+checkout some helpful guidance around this topic on
 [IBM Cloud PAL](https://pages.github.ibm.com/ibmcloud/pal/dark-mode-guidelines/designers/#illustrations-in-dark-mode)
 (internal only).
 
@@ -449,6 +448,6 @@ some helpful guidance around this topic on
 <InlineNotification>
 
 **Coming soon:** This content is currently be worked on. Check back at a later
-date.
+date for more information.
 
 </InlineNotification>
