--- a/src/pages/guidelines/color/overview.mdx
+++ b/src/pages/guidelines/color/overview.mdx
@@ -22,7 +22,7 @@ harmony through our User Interface design.
 
 <AnchorLink>Introduction</AnchorLink>
 <AnchorLink>Color anatomy</AnchorLink>
-<AnchorLink>Understanding color</AnchorLink>
+<AnchorLink>Applying color</AnchorLink>
 <AnchorLink>Accessibility</AnchorLink>
 <AnchorLink>Resources</AnchorLink>
 
@@ -88,7 +88,7 @@ The layering model differs between the _light_ and _dark_ themes.
 
 <br />
 
-## Understanding color
+## Applying color
 
 Carbon uses tokens and themes to manage color. Tokens are role-based, and themes
 specify the color values that serve those roles in the UI.
