incorporating Big Carbon feedback for H2s

--- a/src/pages/guidelines/typography/type-sets.mdx
+++ b/src/pages/guidelines/typography/type-sets.mdx
@@ -27,11 +27,11 @@ available within the one [Sketch kit](/designing/design-kits/).
 <AnchorLinks>
 
 <AnchorLink>Overview</AnchorLink>
-<AnchorLink>Supporting styles</AnchorLink>
+<AnchorLink>Small styles</AnchorLink>
 <AnchorLink>Body styles</AnchorLink>
 <AnchorLink>Fixed heading styles</AnchorLink>
 <AnchorLink>Fluid heading styles</AnchorLink>
-<AnchorLink>Fluid quote styles</AnchorLink>
+<AnchorLink>Fluid callout styles</AnchorLink>
 <AnchorLink>Fluid display styles</AnchorLink>
 <AnchorLink>Questions</AnchorLink>
 
@@ -72,11 +72,12 @@ nature of the pages.
   size at different breakpoints, and can extrapolate/stretch in between sizes
   for smooth transitions.
 
-## Supporting styles
+## Small styles
 
-There are two supporting styles for use with productive and expressive moments.
-Productive styles have a suffix of `-01` and expressive styles have a suffix of
-`-02`.
+The small styles are for use with productive and expressive moments and include
+styles for code snippets, labels for captions and helper text, as well as legal
+copy. Productive styles have a suffix of `-01` and expressive styles have a
+suffix of `-02`.
 
 ## Body styles
 
@@ -100,9 +101,9 @@ styles change size at different breakpoints. They may be used in product pages
 where text sits outside of a container, and a blend of expressive and productive
 type styles is desired for hierarchy and distinction.
 
-## Fluid quote styles
+## Fluid callout styles
 
-These quote styles are part of the expressive set and being fluid, they will
+These callout styles are part of the expressive set and being fluid, they will
 adjust at different breakpoints.
 
 ## Fluid display styles
