--- a/src/pages/guidelines/color/implementation.mdx
+++ b/src/pages/guidelines/color/implementation.mdx
@@ -15,19 +15,20 @@ TBD
 
 <AnchorLinks>
 
-<AnchorLink>Implementing the layering model</AnchorLink>
+<AnchorLink>Layering model</AnchorLink>
 <AnchorLink>Light or dark mode</AnchorLink>
 <AnchorLink>Inline theming</AnchorLink>
 <AnchorLink>Resources</AnchorLink>
 
 </AnchorLinks>
 
-## Implementing the layering model
+## Layering model
 
-There are two ways to implement the layering model within a single theme, either
-by using explicit layer tokens or smart contextual layer tokens. Both ways are
-acceptable with different pros and cons that should be weighed in deciding which
-to use when building your product.
+There are two ways to implement the
+[layering model](/guidelines/color/overview#layering-model) within a single
+theme, either by using explicit layer tokens or smart contextual layer tokens.
+Both ways are acceptable with different pros and cons that should be weighed in
+deciding which to use when building your product.
 
 | Token type                                                                          | Definition                                                                                                                                                                                             |
 | ----------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
@@ -89,8 +90,6 @@ tokens are a part of these layering sets. Other tokens for elements like `text`
 and `icon` work across layer sets.  _Note: previously in v10 many color tokens
 had numeral suffixes, now in v11 only layering tokens will have this
 distinction._
-
-**Key:**
 
 - Base layer: Magenta
 - Layer set 01: Purple
