feat(typeset): brought typeSet into the API

--- a/src/pages/guidelines/typography/type-sets.mdx
+++ b/src/pages/guidelines/typography/type-sets.mdx
@@ -9,6 +9,8 @@ description:
 tabs: ['Overview', 'Type usage', 'Type sets', 'Code']
 ---
 
+import TypesetStyle from 'components/TypesetStyle';
+
 <PageDescription>
 
 Carbon uses type tokens to manage our typography, and these tokens sit within
@@ -72,11 +74,15 @@ nature of the pages.
   size at different breakpoints, and can extrapolate/stretch in between sizes
   for smooth transitions.
 
-## Supporting styles
+## Small styles
 
 There are two supporting styles for use with productive and expressive moments.
 Productive styles have a suffix of `-01` and expressive styles have a suffix of
 `-02`.
+
+<TypesetStyle breakpointControls={false} typesets="supportingStyle" />
+
+<TypesetStyle breakpointControls={false} typesets="supportingStyle" />
 
 ## Body styles
 
