feat(typeset): added new small and body type

--- a/src/pages/guidelines/typography/type-sets.mdx
+++ b/src/pages/guidelines/typography/type-sets.mdx
@@ -76,18 +76,18 @@ nature of the pages.
 
 ## Small styles
 
-There are two supporting styles for use with productive and expressive moments.
-Productive styles have a suffix of `-01` and expressive styles have a suffix of
-`-02`.
+There are two small styles for use with productive and expressive moments.
+Productive styles have a suffix of -01 and expressive styles have a suffix of
+-02.
 
-<TypesetStyle breakpointControls={false} typesets="supportingStyle" />
-
-<TypesetStyle breakpointControls={false} typesets="supportingStyle" />
+<TypesetStyle typesets="smallStyle" />
 
 ## Body styles
 
 There are two body styles for productive and expressive moments. Productive
-styles have a suffix of `-01` and expressive styles have a suffix of `-02`.
+styles have a suffix of -01 and expressive styles have a suffix of -02.
+
+<TypesetStyle typesets="body" />
 
 ## Fixed heading styles
 
