--- a/src/pages/guidelines/color/implementation.mdx
+++ b/src/pages/guidelines/color/implementation.mdx
@@ -46,6 +46,7 @@ deciding which to use when building your product.
   A visual spec using layer set tokens (left) versus contextual tokens (right).
 </Caption>
 
+<!---
 ### Token list
 
 | Contextual tokens         | Layer set 01                 | Layer set 02                 | Layer set 03                 |
@@ -63,6 +64,7 @@ deciding which to use when building your product.
 | `$border-subtle`          | `$border-subtle-01`          | `$border-subtle-02`          | `$border-subtle-03`          |
 | `$border-subtle-selected` | `$border-subtle-selected-01` | `$border-subtle-selected-02` | `$border-subtle-selected-03` |
 | `$border-strong`          | `$border-strong-01`          | `$border-strong-02`          | `$border-strong-03`          |
+--->
 
 <br />
 
@@ -70,15 +72,15 @@ deciding which to use when building your product.
 
 Layer tokens are sets of explicit tokens used to manually map the layering model
 onto components. They are part of the theme package and come in predefined sets
-that pair ui and interaction colors together to accurately match the layering
-model and enforce correct color contrast.
+that pair UI and interaction colors together to accurately match the layering
+model in each theme.
 
 There are four sets of color layering within a theme: base layer, layer 01,
-layer 02, and layer 03. After each layer of color is added you move up to the
-next layering level and use the next set of layering tokens. For example, on top
-of `$layer-01` you would place `$layer-02`. These layer set tokens are
-identified by a number suffix (-01, -02, -03) attached to the core token name,
-such as `$field-03`. The number indicates which set the token is a part of.
+layer 02, and layer 03. After each layer of color added you move up to the next
+layering level and use the next set of layering tokens. For example, on top of
+`$layer-01` you would place `$layer-02`. These layer set tokens are identified
+by a number suffix (-01, -02, -03) attached to the core token name, such as
+`$field-03`. The number indicates which set the token is a part of.
 
 Notice, not all layer set tokens use `$layer` as its token name. Token sets also
 include `border` and `field` tokens as well as interactive state tokens for the
@@ -228,7 +230,7 @@ implement the nesting layers correctly in code use the layer component with the
 contextual tokens.
 
 Contextual tokens have all the same type of tokens as the layer set except
-without the number prefixes. It doesn't matter what layer it sits on, the
+without the number prefixes. It does not matter what layer it sits on, the
 contextual token is always the same across layer levels.
 
 <Row>
