--- a/src/pages/guidelines/color/implementation.mdx
+++ b/src/pages/guidelines/color/implementation.mdx
@@ -80,7 +80,9 @@ layer 02, and layer 03. After each layer of color added you move up to the next
 layering level and use the next set of layering tokens. For example, on top of
 `$layer-01` you would place `$layer-02`. These layer set tokens are identified
 by a number suffix (-01, -02, -03) attached to the core token name, such as
-`$field-03`. The number indicates which set the token is a part of.
+`$field-03`. The number indicates which set the token is a part of. _Note:
+previously in v10 many color tokens had numeral suffixes, now in v11 only
+layering tokens will have this distinction._
 
 Notice, not all layer set tokens use `$layer` as its token name. Token sets also
 include `border` and `field` tokens as well as interactive state tokens for the
@@ -88,9 +90,8 @@ various layers. Field is considered a layer level and uses the next level token
 from the layer it is placed on. Border tokens pair with its same number, so
 `$field-03` pairs with `$border-strong-03` in a text input.  Only certain color
 tokens are a part of these layering sets. Other tokens for elements like `text`
-and `icon` work across layer sets.  _Note: previously in v10 many color tokens
-had numeral suffixes, now in v11 only layering tokens will have this
-distinction._
+and `icon` work across layer sets. For a full list of the layer set tokens see
+the [color usage](/guidelines/color/usage) tab.
 
 - Base layer: Magenta
 - Layer set 01: Purple
@@ -232,6 +233,24 @@ contextual tokens.
 Contextual tokens have all the same type of tokens as the layer set except
 without the number prefixes. It does not matter what layer it sits on, the
 contextual token is always the same across layer levels.
+
+```
+## Contextual token list
+
+$layer
+$layer-active
+$layer-hover
+$layer-selected
+$layer-selected-hover
+$layer-accent
+$layer-accent-active
+$layer-accent-hover
+$field
+$field-hover
+$border-subtle
+$border-subtle-selected
+$border-strong
+```
 
 <Row>
 <Column colLg={8}>
